--- a/serverless.yaml
+++ b/serverless.yaml
@@ -29,6 +29,7 @@ provider:
     ENV: ${self:custom.environments.ENV}
     DB_PORT: 3306
     DB_USER_NAME: ${self:custom.secret.USER_NAME}
+    DB_HOST: ${self:custom.secret.DB_HOST}
 
 custom:
   defaultStage: itg
@@ -56,7 +57,7 @@ functions:
   listPromotionalItems:
     name: list_promotional_items
     handler: src/handlers/list_promotional_items.handler
-    description: "販促品一覧"
+    description: "商品一覧"
     layers:
       - !Ref PythonRequirementsLambdaLayer
     vpc:
